# simplecore

./: CMakeLists.txt  main.cpp  main.qml  simple-session.desktop
resources/: prts-wayland.desktop  simple-session.desktop  simple-wayland.desktop
session/: application.cpp  processmanager.cpp
src/: application.cpp  application.h  compositor.cpp  compositor.h  main.cpp  process.cpp  process.h  processmanager.cpp
